--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: aiken-lang/setup-aiken@v1.0.20-alpha
+      - uses: aiken-lang/setup-aiken@v0.1.0
         with:
-          version: v1
+          version: v1.0.20-alpha
 
       - run: aiken fmt --check
       - run: aiken check -D
